--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-    "setuptools >= 80.9",
-    "setuptools_scm >= 9.2",
+    "setuptools==80.9.0",
+    "setuptools_scm==9.2.0",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -10,7 +10,7 @@ name = "qof"
 description = "qof | Quickly Organize Files!"
 # requires-python = ">= 3.10"
 readme = "README.md"
-version = "1.1.2"
+version = "1.1.3"
 requires-python = ">=3.10"
 license = "MIT"
 license-files = [
@@ -185,6 +185,7 @@ supported = false
 # Web deployments
 [tool.briefcase.app.qof.web]
 supported = false
+
 
 
 
