--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 name = "qof"
 description = "qof | Quickly Organize Files!"
 readme = "README.md"
-version = "1.1.12"
+version = "1.1.13"
 requires-python = ">=3.10"
 license = "MIT"
 license-files = [
@@ -45,8 +45,8 @@ classifiers = [
 ]
 dependencies = [
     "pip >= 21.2",
-    "PySide6-Essentials ~= 6.9",
-    "darkdetect ~= 0.8.0",
+    "PySide6-Essentials >= 6.9.0",
+    "darkdetect >= 0.8.0",
 ]
 
 
@@ -178,6 +178,7 @@ supported = false
 # Web deployments
 [tool.briefcase.app.qof.web]
 supported = false
+
 
 
 
