--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ build-backend = "setuptools.build_meta"
 name = "qof"
 description = "qof | Quickly Organize Files!"
 readme = "README.md"
-version = "1.1.18"
-requires-python = ">=3.10"
+version = "1.1.19"
+requires-python = "<3.14,>=3.10"
 license = "MIT"
 license-files = [
     "LICENSE",
@@ -178,6 +178,7 @@ supported = false
 # Web deployments
 [tool.briefcase.app.qof.web]
 supported = false
+
 
 
 
