--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ build-backend = "setuptools.build_meta"
 name = "qof"
 description = "qof | Quickly Organize Files!"
 readme = "README.md"
-version = "1.1.20"
+version = "1.1.21"
 license = "MIT"
 license-files = [
     "LICENSE",
@@ -44,7 +44,7 @@ classifiers = [
 ]
 dependencies = [
     "pip >= 21.2",
-    "pyside6 >= 6.9",
+    "pyside6",
     "darkdetect >= 0.8.0",
 ]
 
@@ -177,6 +177,7 @@ supported = false
 # Web deployments
 [tool.briefcase.app.qof.web]
 supported = false
+
 
 
 
