--- a/.pylintrc
+++ b/.pylintrc
@@ -447,6 +447,9 @@ disable=raw-checker-failed,
         too-many-instance-attributes,
         broad-exception-caught,
         too-many-nested-blocks,
+	unreachable,
+	trailing-whitespace,
+	wrong-import-order,
 
 
 # Enable the message, report, category or checker with the given id(s). You can
