--- a/.pylintrc
+++ b/.pylintrc
@@ -25,7 +25,7 @@ clear-cache-post-run=no
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
 # run arbitrary code.
-extension-pkg-allow-list=
+extension-pkg-allow-list=PySide6.QtWidgets,PySide6.QtGui,PySide6.QtCore
 
 # A comma-separated list of package or module names from where C extensions may
 # be loaded. Extensions are loading into the active Python interpreter and may
@@ -440,7 +440,6 @@ disable=raw-checker-failed,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero,
         # These are future improvements.
-        no-name-in-module,
         too-many-instance-attributes,
         broad-exception-caught,
         too-many-nested-blocks,
