--- a/.pylintrc
+++ b/.pylintrc
@@ -440,6 +440,8 @@ disable=raw-checker-failed,
         use-implicit-booleaness-not-comparison-to-string,
         use-implicit-booleaness-not-comparison-to-zero,
         broad-exception-caught,
+        no-name-in-module,
+        import-error,
 
 
 
